nginx/configurations/databaseIngress.yaml
#nginx/databaseIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: database-ingress
  namespace: database
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  tls:
    - hosts:
        - "*.damdiel.com"  # Wildcard domain for all services
  rules:
    - host: mariadb.damdiel.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mariadb
                port:
                  number: 30446
    - host: mongodb.damdiel.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongodb
                port:
                  number: 30445
    - host: mongodb-metrics.damdiel.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongodb-metrics
                port:
                  number: 9216
