nginx/configurations/kafkaIngress.yaml
#nginx/kafkaIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ingress
  namespace: kafka
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  tls:
    - hosts:
        - "*.damdiel.com"  # Wildcard domain for all services
  rules:
    - host: kafka.damdiel.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-controller-0-external
                port:
                  number: 9094
